--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 			}
 
 			.snap-container {
-				height: 100vh;
+				height: 100dvh;
 				overflow-y: scroll;
 				scroll-snap-type: y mandatory;
 				scroll-behavior: smooth;
 			}
 
 			section {
-				height: 100vh;
+				height: 100dvh;
 				display: flex;
 				flex-direction: column;
 				justify-content: center;
@@ -134,7 +134,7 @@
 			.hint {
 				position: fixed;
 				bottom: 1rem;
-				width: 100vw;
+				width: 100dvw;
 				text-align: center;
 				font-size: 0.875rem;
 				opacity: 0.7;
