--- a/index.html
+++ b/index.html
@@ -379,17 +379,13 @@
 					<li class="badge">JavaScript</li>
 					<li class="badge group">Network -></li>
 					<li class="badge">VPC</li>
-					<li class="badge">VPN</li>
 					<li class="badge">VPN Tunnels</li>
-					<li class="badge">Network security</li>
+					<li class="badge">Firewall</li>
 					<li class="badge">CIDR</li>
 					<li class="badge group">Observability -></li>
-					<li class="badge">Grafana</li>
-					<li class="badge">Tempo</li>
-					<li class="badge">Promtail</li>
+					<li class="badge">Grafana Stack</li>
 					<li class="badge">OpenTelemetry</li>
-					<li class="badge">Kibana</li>
-					<li class="badge">Elastic Beats</li>
+					<li class="badge">Elastic Stack</li>
 					<li class="badge">Datadog</li>
 					<li class="badge group">Messaging -></li>
 					<li class="badge">RabbitMQ</li>
