feat: remove skills

--- a/index.html
+++ b/index.html
@@ -420,17 +420,15 @@
 					<li class="badge">Golang</li>
 					<li class="badge">Shell Script</li>
 					<li class="badge">Python</li>
-					<li class="badge">JavaScript</li>
 					<li class="badge group">Observability -></li>
 					<li class="badge">Grafana Stack</li>
-					<li class="badge">OpenTelemetry</li>
-					<li class="badge">Elastic Stack</li>
+					<li class="badge">ELK Stack</li>
 					<li class="badge">Datadog</li>
 					<li class="badge group">Messaging -></li>
 					<li class="badge">RabbitMQ</li>
 					<li class="badge">Kafka</li>
 					<li class="badge group">SQL -></li>
-					<li class="badge">PostgreSQL</li>
+					<li class="badge">Postgres</li>
 					<li class="badge">MySQL</li>
 					<li class="badge">SQL Server</li>
 					<li class="badge group">NoSQL -></li>
