feat: remove skills

--- a/index.html
+++ b/index.html
@@ -403,14 +403,12 @@
 					<li class="badge">AWS</li>
 					<li class="badge group">Computing -></li>
 					<li class="badge highlight">Kubernetes</li>
+					<li class="badge">Docker</li>
 					<li class="badge highlight">Linux servers</li>
 					<li class="badge">Windows server</li>
 					<li class="badge group">CI/CD -></li>
 					<li class="badge highlight">GitHub Actions</li>
 					<li class="badge">Jenkins</li>
-					<li class="badge group">Container -></li>
-					<li class="badge highlight">Docker</li>
-					<li class="badge">Docker compose</li>
 					<li class="badge group">IaC -></li>
 					<li class="badge">Terraform</li>
 					<li class="badge">Ansible</li>
